--- a/angularjs-app/emp-app/fragments/home.html
+++ b/angularjs-app/emp-app/fragments/home.html
@@ -1,7 +1,16 @@
 <section>
 	<h3 class="h3">Employee list:</h3>
 	<a class="btn btn-primary btn-block" href="#!/add">Add</a>
-	<div id="emp-list" ng-repeat="emp in employees track by $index">
-		<div>{{emp.name}}</div>
+	<div class="container-sm">
+		<div id="emp-list" class="row"
+			ng-repeat="emp in employees track by $index">
+			<div class="col">{{emp.id}}</div>
+			<div class="col">{{emp.name}}</div>
+			<div class="col">{{emp.salary}}</div>
+			<a class="btn btn-secondary" href="#!/edit/{{emp.id}}">Edit</a>
+			<button class="btn btn-danger" ng-click="delete(emp)">
+				Delete
+			</button>
+		</div>
 	</div>
 </section>
