--- a/angularjs-app/emp-app/fragments/add.html
+++ b/angularjs-app/emp-app/fragments/add.html
@@ -1,5 +1,13 @@
 <section>
 	<div class="container">
+		<a class="btn btn-secondary" href="#!/">
+			<span class="h3 font-weight-bold">&lt;</span>
+			<span class="h3">home</span>
+		</a>
+	</div>
+	<hr />
+	<div class="container">
+		<h4 class="h4 text-center">Add new employee</h4>
 		<form name="addemp" ng-submit="addEmp()" novalidate>
 			<div class="form-group">
 				<label for="name">Name:</label>
@@ -25,7 +33,7 @@
 				</span>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary"
+				<button type="submit" class="btn btn-primary btn-block"
 					ng-disabled="addemp.$invalid">
 					Add
 				</button>
