--- a/angularjs-app/emp-app/fragments/edit.html
+++ b/angularjs-app/emp-app/fragments/edit.html
@@ -1,6 +1,12 @@
 <section>
 	<div class="container">
-		{{test}}
+		<a class="btn btn-secondary" href="#!/">
+			<span class="h3 font-weight-bold">&lt;</span>
+			<span class="h3">home</span>
+		</a>
+	</div>
+	<hr />
+	<div class="container">
 		<h3 class="h3">Edit employee data</h3>
 		<form name="editemp" novalidate ng-submit="update()">
 			<div class="form-group">
@@ -31,7 +37,7 @@
 				</span>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary"
+				<button type="submit" class="btn btn-primary btn-block"
 					ng-disabled="editemp.$invalid">
 					Update
 				</button>
