product-app mvp

--- a/angularjs-app/emp-app/fragments/home.html
+++ b/angularjs-app/emp-app/fragments/home.html
@@ -7,7 +7,7 @@
 	</a>
 	<hr />
 	<div class="container-sm">
-		<div class="row h4 bg-primary py-2 border rounded">
+		<div class="row h4 bg-primary py-2 border rounded font-weight-bold">
 			<div class="col-sm" ng-click="key = 'id'; rvs = !rvs">
 				ID <sup>{{key == 'id' ? rvs ? 'v' : '^' : ''}}</sup>
 			</div>
@@ -16,7 +16,7 @@
 			</div>
 			<div class="col d-none d-md-block"
 				ng-click="key = 'salary'; rvs = !rvs">
-				salary <sup>{{key == 'salary' ? rvs ? 'v' : '^' : ''}}</sup>
+				Salary <sup>{{key == 'salary' ? rvs ? 'v' : '^' : ''}}</sup>
 			</div>
 			<div class="col-sm text-right">Controls</div>
 		</div>
@@ -33,5 +33,5 @@
 			</div>
 		</div>
 	</div>
-	<st-footer year="2020"></st-footer>
+	<st-footer year="2030"></st-footer>
 </section>
