add login to employee app

--- a/angularjs-app/emp-app/fragments/home.html
+++ b/angularjs-app/emp-app/fragments/home.html
@@ -26,7 +26,7 @@
 			<div class="col-sm">{{emp.name}}</div>
 			<div class="col d-none d-md-block">{{emp.salary}}</div>
 			<div class="px-1 col-sm text-right">
-				<a class="btn btn-success" href="#!/edit/{{emp.id}}">Edit</a>
+				<a class="btn btn-success" href="#!/login/e/{{emp.id}}">Edit</a>
 				<button class="btn btn-danger" ng-click="delete(emp)">
 					Delete
 				</button>
