--- a/angularjs-app/product-app/fragments/home.html
+++ b/angularjs-app/product-app/fragments/home.html
@@ -1,3 +1,16 @@
 <section class="container">
 	<!-- {{location}} -->
+	<br />
+	<div class="border border-primary rounded">
+		<div class="bg-primary rounded-top h3 p-2 text-light">
+			Welcome
+		</div>
+		<div class="container text-center">
+			<img class="img-fluid w-75" src="imgs/logo.jpg">
+		</div>
+		<div class="text-center">
+			<p>Developed by:</p>
+			<p>@akshay</p>
+		</div>
+	</div>
 </section>
