--- a/angularjs-app/product-app/fragments/list.html
+++ b/angularjs-app/product-app/fragments/list.html
@@ -1,14 +1,14 @@
 <section class="container">
 	<!-- {{location}} -->
-	<div class="bg-primary h3 p-2 rounded-top text-light">
-		Product List
-	</div>
-	<div class="border rounded-bottom">
+	<div class="border border-secondary rounded">
+		<div class="bg-primary h3 p-2 text-light rounded-top">
+			Product List
+		</div>
 		<div class="form-group px-2">
 			<label for="filtertxt">Filter By:</label>
 			<input class="form-control" name="filter" id="filtertxt"
 				placeholder="Filter by Name" ng-model="filtertxt" />
-			<hr />
+			<hr class="bg-dark" />
 		</div>
 		<div class="container row" id="labels">
 			<div class="col-sm">
