--- a/angularjs-app/product-app/fragments/product.html
+++ b/angularjs-app/product-app/fragments/product.html
@@ -1,9 +1,9 @@
 <section class="container">
 	<!-- {{location}} -->
-	<div class="bg-primary h3 p-2 rounded-top text-light">
-		Product Detail: {{product.productName}}
-	</div>
-	<div class="border rounded-bottom">
+	<div class="border border-secondary rounded">
+		<div class="bg-primary h3 p-2 rounded-top text-light">
+			Product Detail: {{product.productName}}
+		</div>
 		<div class="row py-3">
 			<div class="col">
 				<table class="table-sm">
@@ -41,7 +41,7 @@
 		</div>
 		<div class="container bg-light py-2">
 			<a class="btn btn-secondary text-light" href="#!/list">
-				<span class="font-weight-bolder">&lt;</span>
+				<span class="font-weight-bold">&lt;</span>
 				Back
 			</a>
 		</div>
