--- a/angularjs-app/emp-app/fragments/home.html
+++ b/angularjs-app/emp-app/fragments/home.html
@@ -27,9 +27,9 @@
 			<div class="col d-none d-md-block">{{emp.salary}}</div>
 			<div class="px-1 col-sm text-right">
 				<a class="btn btn-success" href="#!/login/e/{{emp.id}}">Edit</a>
-				<button class="btn btn-danger" ng-click="delete(emp)">
+				<a class="btn btn-danger" href="#!/login/d/{{emp.id}}">
 					Delete
-				</button>
+				</a>
 			</div>
 		</div>
 	</div>
