--- a/angularjs-app/product-app/fragments/list.html
+++ b/angularjs-app/product-app/fragments/list.html
@@ -41,7 +41,7 @@
 					{{product.releaseDate}}
 				</div>
 				<div class="col-sm">
-					{{product.price}}
+					${{product.price}}
 				</div>
 				<div class="col-sm">
 					<st-stars stars={{product.starRating}} />
