--- a/angular/welcome-app/src/app/Welcome/welcome.component.html
+++ b/angular/welcome-app/src/app/Welcome/welcome.component.html
@@ -1,8 +1,15 @@
-<h1 class="text-primary">{{message}}</h1>
+<!-- <h1 class="text-primary">{{message}}</h1>
 <h1>{{22/7 | number:'.1-2'}}</h1>
 <h1>{{'AKshay' | uppercase}}</h1>
 
 <h1>{{greetMe()}}</h1>
-<h1>{{greet}}</h1>
+<h1>{{greet}}</h1> -->
 
 <!-- <h2>{{time | date:'medium'}}</h2> -->
+<!-- <app-student></app-student> -->
+<!-- <app-blueball></app-blueball> -->
+<!-- <app-twoway></app-twoway> -->
+<!-- <app-service-test></app-service-test> -->
+<!-- <app-numberapi></app-numberapi> -->
+<!-- <app-parentchild></app-parentchild> -->
+<app-questionbank></app-questionbank>
