--- a/ionic3-app/welcome-app/src/app/name-matcher/name-matcher.page.html
+++ b/ionic3-app/welcome-app/src/app/name-matcher/name-matcher.page.html
@@ -12,6 +12,9 @@
 			<ion-input type="text" [(ngModel)]="person1" name="person1"
 				placeholder="Enter name here" class="c-input"
 				(ngModelChange)="calculateMatch()"></ion-input>
+			<ion-button (click)="getContact(1)">
+				<ion-icon name="contact"></ion-icon>
+			</ion-button>
 		</ion-item>
 		<ion-item>
 			<ion-label>Person 2:</ion-label>
@@ -19,8 +22,14 @@
 			<ion-input type="text" [(ngModel)]="person2" name="person2"
 				placeholder="Enter name here" class="c-input"
 				(ngModelChange)="calculateMatch()"></ion-input>
+			<ion-button (click)="getContact(2)">
+				<ion-icon name="contact"></ion-icon>
+			</ion-button>
 		</ion-item>
 	</ion-list>
+	<ion-button expand="block" color="danger" (click)="reset()">
+		Reset
+	</ion-button>
 	<!-- card -->
 	<br />
 	<div class="card-holder">
@@ -39,4 +48,9 @@
 			</ion-card-content>
 		</ion-card>
 	</div>
+
+	<!-- test
+	<canvas #cv width="480px" height="360px" style="width: 100%; height: 25%;">
+		Canvas not supported
+	</canvas> -->
 </ion-content>
