--- a/ionic3-app/expense-tracker/src/app/edit/edit.page.html
+++ b/ionic3-app/expense-tracker/src/app/edit/edit.page.html
@@ -1,21 +1,24 @@
 <ion-header>
-	<ion-toolbar>
-		<ion-button color="light" [routerLink]="['/home']">
+	<ion-toolbar color="light">
+		<ion-button icon-only color="light" [routerLink]="['/home']"
+			slot="start" fill="clear">
 			<ion-icon name="arrow-back"></ion-icon>
 		</ion-button>
-		<ion-label>{{title}}</ion-label>
-
-		<ion-button color="light" (click)="deleteExpense()">
+		<ion-title>{{title}}</ion-title>
+		<ion-button icon-only color="light" (click)="deleteExpense()"
+			slot="secondary" fill="clear">
 			<ion-icon name="trash"></ion-icon>
 		</ion-button>
-		<ion-button color="light" (click)="updateExpense()">
+		<ion-button icon-only color="light" (click)="updateExpense()"
+			slot="secondary" fill="clear">
 			<ion-icon name="checkmark"></ion-icon>
 		</ion-button>
+
 	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-	<h1>{{expense.date}}</h1>
+	<h1>{{expense.date | date: 'yyyy-MM-dd'}}</h1>
 	<div>
 		<ion-label color="primary">Date</ion-label>
 		<ion-input type="date" name="date" [(ngModel)]="expense.date">
