Expense tracker 2: added date picker

--- a/android-app/ExpenseTracker2/app/src/main/res/layout/list_expense.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/layout/list_expense.xml
@@ -35,6 +35,12 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/dateText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/date" />
+
+            <TextView
                 android:id="@+id/descriptionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
