--- a/android-app/ExpenseTracker2/app/src/main/res/layout/content_expense_form.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/layout/content_expense_form.xml
@@ -36,7 +36,8 @@
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:onClick="showDatePicker"/>
 
     <TextView
         android:id="@+id/textView2"
