--- a/android-app/ExpenseTracker2/app/src/main/res/layout/activity_main.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/design_default_color_primary"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </android.support.design.widget.CoordinatorLayout>
