--- a/android-app/ExpenseTracker2/app/src/main/res/layout/content_expense_form.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/layout/content_expense_form.xml
@@ -32,12 +32,14 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="Date"
-        android:inputType="date"
+        android:inputType="none"
+        android:focusable="false"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:onClick="showDatePicker"/>
+        android:onClick="showDatePicker"
+        />
 
     <TextView
         android:id="@+id/textView2"
