--- a/android-app/ExpenseTracker2/app/src/main/res/menu/menu_add.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/menu/menu_add.xml
@@ -4,9 +4,9 @@
 
     <item
         android:id="@+id/addNote"
-        app:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="@string/add_expense" />
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/add_expense"
+        app:showAsAction="always" />
 
 
 </menu>
