--- a/android-app/ExpenseTracker2/app/src/main/res/menu/menu_edit.xml
+++ b/android-app/ExpenseTracker2/app/src/main/res/menu/menu_edit.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/edit"
-        app:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="@string/edit_expense" />
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/edit_expense"
+        app:showAsAction="always" />
 </menu>
