--- a/android-app/PercentCalculator/app/src/main/res/layout/activity_main.xml
+++ b/android-app/PercentCalculator/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/spnrMethods"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="24sp"
                 android:entries="@{calculator.calculatorList}"
                 android:onItemSelected="@{(parent, view, pos, id) -> calculator.onCalculatorSelected(parent, view, pos, id)}">
 
@@ -31,8 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:text="@{calculator.x}"
-                android:afterTextChanged="@{() -> calculator.setValueOfX(etX)}"
+                android:text="@={calculator.x}"
                 android:hint="@string/x"/>
 
             <EditText
@@ -40,8 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:text="@{calculator.y}"
-                android:afterTextChanged="@{() -> calculator.setValueOfY(etY)}"
+                android:text="@={calculator.y}"
                 android:hint="@string/y"/>
 
             <Button
