--- a/docker-apps/bookmarks-manager/client/bookmark-app/src/app/home/home.component.html
+++ b/docker-apps/bookmarks-manager/client/bookmark-app/src/app/home/home.component.html
@@ -1,6 +1,11 @@
 <div class="container">
 	<!-- Home -->
 	<h1 class="h1">Bookmark Manager</h1>
+	<div role="message" class="container">
+		<span class="text-danger">
+			{{msg}}
+		</span>
+	</div>
 	<!-- Login form -->
 	<div role="login-form" class="container">
 		<h3 class="h3">Login</h3>
